# optopsy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LICENSE  PLAN.md  README.md  TYPE_HINTS.md  bench.py  bitbucket-pipelines.yml  codecov.yml  conftest.py  index.html  main.py  mkdocs.yml  mypy.ini  objects.inv  plan.md  pyproject.toml  pytest.ini  railway.toml  requirements.txt  ruff.toml  settings.py  setup.py  sitemap.xml  vulture_whitelist.py
.circleci/: config.yml
.claude/hooks/: session-start.sh
.github/: FUNDING.yml  dependabot.yml
.github/instructions/: code-review.instructions.md  tests.instructions.md  ui.instructions.md
.github/workflows/: ci.yml  docs.yml  python-publish-2.yml  python-publish.yml
ai-search-discovery-enhancements/: index.html
api-reference/: index.html
chat-ui/: index.html
contributing/: index.html
data/: A.csv  VXX.csv  index.html
data/tests/: test_cboe_spx.csv  test_dod_a.csv
docs/: ai-search-discovery-enhancements.md  api-reference.md  api-reference.zh.md  arbitrary-exit-optimization.md  chat-ui.md  contributing.md  data.md  entry-signals.md  examples.md  examples.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  parameters.md  parameters.zh.md  plugins.md  strategies.md  strategies.zh.md
docs/design/: commission-modeling.md  signals-expansion.md
docs/ideas/: agent-backtesting-architecture-eval.md  ai-agent-enhancement-roadmap.md  optimization.md
docs/maintenance/: agent-context-architecture.md  external-library-opportunities.md  per-leg-delta-targeting.md  refactoring-plan.md  result-store-plan.md  test-gap-analysis.md
docs/strategies/: butterflies.md  butterflies.zh.md  calendars.md  calendars.zh.md  condors.md  covered.md  covered.zh.md  diagonals.md  diagonals.zh.md  iron-strategies.md  iron-strategies.zh.md  singles.md  singles.zh.md  spreads.md  spreads.zh.md  straddles-strangles.md  straddles-strangles.zh.md
entry-signals/: index.html
examples/: index.html
getting-started/: index.html
optopsy/: __init__.py  algos.py  backtest.py  backtester.py  broker.py  calculations.py  calendar.py  checks.py  core.py  data.py  data_feed.py  datafeeds.py  definitions.py  enums.py  evaluation.py  exits.py  filter.py  filters.py  globals.py  helpers.py  metrics.py  optimizer.py  option_legs.py  option_queries.py  option_query.py  option_spreads.py  option_strategies.py  option_strategy.py  options.py  optopsy.py  output.py  plugins.py  pricing.py  rules.py  settings.py  signals.py  simulator.py  statistics.py  strategies.py  strategy.py  (+3 more)
pandasai-integration/: index.html
parameters/: index.html
plugins/: index.html
samples/: basic_strategy.py  new_sample_spx_strategy.py  portfolio_backtest.py  sample_spx_strategy.py  signal_composition.py  simulation_with_risk.py  spx_butterflies_example.py  spx_calendar_example.py  spx_collar_example.py  spx_condor_example.py  spx_covered_example.py  spx_diagonal_example.py  spx_iron_condors_example.py  spx_ratio_spread_example.py  spx_singles_example.py  spx_spreads_example.py  spx_straddles_example.py  spx_strangles_example.py  strategy_comparison.py
scripts/: check-branch-name.sh
search/: search_index.json
strategies/: index.html  sample_optimize_strategy.py  sample_spx_strategy.py  sample_strategy.py
tests/: base.py  basetest.py  conftest.py  data_fixtures.py  filter_fixtures.py  struct_fixtures.py  test_SQLiteDataFeed.py  test_agent.py  test_app.py  test_cache.py  test_check_data_quality.py  test_checks.py  test_cli.py  test_cli_extra.py  test_commission.py  test_compat.py  test_data.py  test_data_import.py  test_datafeeds.py  test_delta_targeting.py  test_early_exits.py  test_filters.py  test_iron_condor_strategy.py  test_iv_signals.py  test_metrics.py  test_optionQuery.py  test_optionStrategies.py  test_optionStrategy.py  test_option_query.py  test_option_symbol.py  test_options.py  test_plugin_integration.py  test_plugins.py  test_providers_init.py  test_result_store.py  test_rules.py  test_schemas.py  test_signals.py  test_signals_calendar.py  test_signals_contract.py  (+37 more)
zh/: index.html
(+155 files in other folders)
